ENT-1860 - Port GuestIdDTO to openapi spec - Added specifications in yaml file - Removed existing GuestIdDTO and GuestIdDTOTest - Updated the populate method of translator - Fixed JUnit tests. Added workaround of GuestIdDTOTest in ConsumerDTOTest to pass JUnits. - Updated hypervisorUpdate() method of HyperVisorResource.java to accept   List<string> GuestIds instead of List<GuestIdDTO>. Because of MismatchedInputException: Cannot   construct instance of GuestIdDTO: no String-argument constructor. This is raised due to   the auto-generated DTO class does not have constructors.
